Added profile and description to channel routes. Moreover added thumbnail support
